# nextword

./: .editorconfig  .gitignore  Cargo.toml  README.md  plan.md
.github/workflows/: ci.yml
crates/nextword-app/: index.html  package-lock.json  package.json  suggestions.html  tsconfig.json  vite.config.ts
crates/nextword-app/src/: main.ts  styles.css  suggestions.ts
crates/nextword-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/nextword-app/src-tauri/capabilities/: default.json
crates/nextword-app/src-tauri/icons/: icon.icns
crates/nextword-app/src-tauri/src/: input.rs  ipc.rs  lib.rs  main.rs  model_download.rs  sidecar.rs  window.rs
crates/nextword-core/: Cargo.toml
crates/nextword-core/src/: context.rs  debounce.rs  lib.rs  parser.rs  predictor.rs  trigger.rs
crates/nextword-macos/: Cargo.toml
crates/nextword-macos/src/: ax.rs  caret.rs  insert.rs  keytap.rs  lib.rs  permissions.rs
scripts/: dev-download-test-model.sh
