[workspace]
resolver = "2"
members = [
    "crates/nextword-core",
    "crates/nextword-macos",
    "crates/nextword-app/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Mert Cobanov <mertcobanov@gmail.com>"]
repository = "https://github.com/cobanov/nextword"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
futures = "0.3"
bytes = "1"
sha2 = "0.10"
hex = "0.4"
parking_lot = "0.12"

# macOS-specific
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-app-kit = "0.2"
core-foundation = "0.10"
core-graphics = "0.24"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
