[package]
name = "nextword-macos"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "nextword_macos"
path = "src/lib.rs"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { workspace = true }
core-graphics = { workspace = true }
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
objc2-app-kit = { workspace = true }

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
nextword-core = { path = "../nextword-core" }
